--- a/style.qss
+++ b/style.qss
@@ -1,6 +1,6 @@
 /**********主界面样式**********/
 QWidget{
-        font-family:Microsoft YaHei;
+        font-family: Microsoft YaHei;
 }
 QWidget#mainWindow {
         border:none;
@@ -17,10 +17,49 @@ QWidget#loadingWidget {
         border-radius: 5px;
         background: rgb(50, 50, 50);
 }
-/***** combox******/
-QComboBox{
-    border:1px solid rgb(204,204,204);
-    border-radius:1px;
+/**********下拉列表**********/
+QComboBox {
+        height: 24px;
+        border-radius: 4px;
+        border: 1px solid rgb(204, 204, 204);
+        background: rgb(255, 255, 255);
+}
+QComboBox:enabled {
+        color: rgb(68, 68, 68);
+}
+QComboBox:!enabled {
+        color: rgb(155, 155, 155);
+}
+QComboBox:enabled:hover, QComboBox:enabled:focus {
+        color: rgb(230, 230, 230);
+        background: rgb(68, 69, 73);
+}
+QComboBox::drop-down {
+        width: 20px;
+        border: none;
+        background: transparent;
+}
+QComboBox::drop-down:hover {
+        background: rgba(255, 255, 255, 30);
+}
+QComboBox::down-arrow {
+        image: url(:/images/scrollico/down);
+}
+QComboBox::down-arrow:on {
+        /**top: 1px;**/
+}
+QComboBox QAbstractItemView {
+        border: 1px solid rgb(100, 100, 100);
+        background: rgb(68, 69, 73);
+        outline: none;
+}
+QComboBox QAbstractItemView::item {
+        height: 25px;
+        color: rgb(175, 175, 175);
+}
+QComboBox QAbstractItemView::item:selected {
+        background: rgba(255, 255, 255, 40);
+        color: rgb(230, 230, 230);
 }
 /**********页签项**********/
 QTabWidget::pane {
@@ -54,7 +93,7 @@ QTabBar::tab:selected {
 }
 /**********按钮**********/
 QPushButton{
-        border-radius: 0px;
+        border-radius: 2px;
         border: none;
         width: 75px;
         height: 25px;
