--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -340,6 +340,12 @@
         <iconset resource="images.qrc">
          <normaloff>:/images/ico/del.png</normaloff>:/images/ico/del.png</iconset>
        </property>
+       <property name="iconSize">
+        <size>
+         <width>40</width>
+         <height>40</height>
+        </size>
+       </property>
        <property name="autoDefault">
         <bool>false</bool>
        </property>
@@ -461,91 +467,6 @@
       </widget>
      </item>
     </layout>
-   </widget>
-   <widget class="QTabWidget" name="tabWidget">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>250</y>
-      <width>331</width>
-      <height>121</height>
-     </rect>
-    </property>
-    <property name="currentIndex">
-     <number>1</number>
-    </property>
-    <widget class="QWidget" name="tab_2">
-     <attribute name="title">
-      <string>Tab 2</string>
-     </attribute>
-     <widget class="QGroupBox" name="groupBox">
-      <property name="geometry">
-       <rect>
-        <x>70</x>
-        <y>10</y>
-        <width>120</width>
-        <height>80</height>
-       </rect>
-      </property>
-      <property name="title">
-       <string>GroupBox</string>
-      </property>
-     </widget>
-    </widget>
-    <widget class="QWidget" name="tab">
-     <attribute name="title">
-      <string>Tab 1</string>
-     </attribute>
-     <widget class="QPushButton" name="pushButton_13">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>20</y>
-        <width>80</width>
-        <height>20</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>PushButton</string>
-      </property>
-      <property name="default">
-       <bool>true</bool>
-      </property>
-      <property name="flat">
-       <bool>false</bool>
-      </property>
-     </widget>
-     <widget class="QComboBox" name="comboBox">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>60</y>
-        <width>221</width>
-        <height>21</height>
-       </rect>
-      </property>
-      <item>
-       <property name="text">
-        <string>12</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>1231231231231</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>123123123123123</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>123123123123123</string>
-       </property>
-      </item>
-     </widget>
-    </widget>
    </widget>
    <widget class="QWidget" name="widget" native="true">
     <property name="geometry">
@@ -866,7 +787,6 @@ letter-spacing: 0;</string>
    </widget>
    <zorder>widget_4</zorder>
    <zorder>gridLayoutWidget</zorder>
-   <zorder>tabWidget</zorder>
    <zorder>widget</zorder>
    <zorder>widget_2</zorder>
    <zorder>widget_3</zorder>
